Add forest module tree constructor